# exam-topic-scraper

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: config.py
src/: main.py  pdf_generator.py  scraper.py
