[tool.poetry]
name = "exam-topic-scraper"
version = "0.1.0"
description = "Scrape and generate PDFs for certification exam topics"

package-mode = false  # Add this line to disable packaging

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
fpdf = "^1.7.2"
google-api-python-client = "^2.90.0"  # Add this for Google Custom Search API

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
